# stockanalysis

./: .gitignore  Cargo.toml  README.md  TODO.md
api/: Cargo.toml
api/src/: lib.rs  tests.rs
api/src/analytics/: detectors.rs  mod.rs  performance.rs  statistics.rs  technicals.rs
api/src/charts/: portfolio.rs  ticker.rs  tickers.rs
api/src/data/: ticker.rs  tickers.rs
api/src/data/livedata/: alphavantage.rs  mod.rs  polygon_io.rs  twelvedata.rs
api/src/data/sql/: events.rs  init.rs  live_data.rs  mod.rs  symbols.rs  time_series.rs  to_dataframe.rs
api/src/data/yahoo/: api.rs
api/src/data/yahoo/screeners/: builder.rs
api/src/models/: kline.rs  screener.rs  ticker.rs
api/src/reports/: report.rs
daemon/: Cargo.toml  criterion.rs
daemon/src/: lib.rs  server.rs  utils.rs
daemon/src/cli/: allocator.rs  logging.rs  main.rs  tokio_console.rs
desktop/: Cargo.toml
desktop/src/: main.rs
mobile/: Cargo.toml
mobile/src/: app.rs  main.rs
python/src/: portfolio.rs  ticker.rs  tickers.rs
resources/: exchanges.json
rust/: Cargo.toml
rust/src/analytics/: statistics.rs
rust/src/charts/: ticker.rs
rust/src/data/: mod.rs  ticker.rs
rust/src/data/livedata/: alphavantage.rs  mod.rs  polygon_io.rs  twelvedata.rs
rust/src/data/sql/: mod.rs  to_dataframe.rs
rust/src/models/: portfolio.rs  tickers.rs
testexample/: Cargo.toml  stock_analysis.txt
testexample/src/: main.rs  server.rs  tools.rs
testexample/src/dashboards/: portfolio.rs
ui/: Cargo.toml
ui/src/: app.rs  lib.rs  server.rs
ui/src/dashboards/: home.rs  performance.rs  screener.rs
web/: Cargo.toml  build.rs  dioxus.toml
web/src/: server.rs
web/src/dashboards/: portfolio.rs
