[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "desktop",
    "mobile",
    "api",
    "testexample",
]

[workspace.dependencies]
dioxus = { version = "0.6.3" }
ui = { path = "ui" }
api = { path = "api" }

[workspace.package]
authors = ["Alexander Schwarzkopf <progs@fangornsrealm.eu>"]
edition = "2021"
repository = "https://github.com/fangornsrealm/stockanalysis"
license = "MIT"
description = "A rust library and user interface for financial data analysis"
readme = "../README.md"
version = "0.1.0"
keywords = ["finance", "analytics"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
