[package]
name = "api"
description = "library to work with financial information."
edition = "2021"
repository = "https://github.com/fangornsrealm/stockanalysis"
license = "MIT"
version = "0.1.0"
keywords = ["finance", "analytics"]

[lib]
path = "src/lib.rs"

[dependencies]
augurs = { path = "../../augurs/crates/augurs" , features = [
    "changepoint",
    "clustering", 
    "dtw", 
    "ets",
    "forecaster",
    "mstl",
    "outlier",
    "prophet",
    "prophet-cmdstan",
    "prophet-wasmstan",
    "seasons",
] }
augurs-changepoint = { path = "../../augurs/crates/augurs-changepoint" }
augurs-clustering  = { path = "../../augurs/crates/augurs-clustering" }
augurs-core        = { path = "../../augurs/crates/augurs-core" }
augurs-dtw         = { path = "../../augurs/crates/augurs-dtw" }
augurs-ets         = { path = "../../augurs/crates/augurs-ets" }
augurs-forecaster  = { path = "../../augurs/crates/augurs-forecaster" }
augurs-outlier     = { path = "../../augurs/crates/augurs-outlier" }
augurs-mstl        = { path = "../../augurs/crates/augurs-mstl" }
augurs-prophet     = { path = "../../augurs/crates/augurs-prophet" }
augurs-seasons     = { path = "../../augurs/crates/augurs-seasons" }

anyhow = "1.0.99"
cached = { version = "0.56.0", features = ["async"] }
chrono = { version = "0.4", features = ["unstable-locales"] }
dirs = "6.0.0"
env_logger = "0.11"
futures = "0.3.31"
indicatif = "0.18.0"
lazy_static = "1"
log = "0.4"
market-data = { path = "../../market-data/", features = ["use-sync"] }
ndarray = "0.16.1"
once_cell = "1.21.3"
openssl = { version = "0.10.73", features = ["vendored"] }
optimization = "0.2.0"
plotly = "0.13.4"
polars = { version = "0.49.1", default-features = false, features = ["lazy", "dtype-datetime", "rows", "fmt_no_tty", "json", "is_in"] }
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json", "cookies"] }
rusqlite = {version = "0.31.0", features = ["bundled", "chrono"]}
select = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
simplelog = "0.12.2"
smartcore = "0.4.2"
statrs = "0.18.0"
strum = { version = "0.27.2", features = ["derive"] }
ta = "0.5.0"
tokio = { version = "1.47.0", features = ["full"] }
vader_sentiment = "0.1.1"
webbrowser = "1.0.5"

[features]
default = ["kaleido"]
kaleido = ["plotly/kaleido", "plotly/kaleido_download"]

[dev-dependencies]
serial_test = "3.2.0"






