[package]
name = "notificationservice"
description = "a daemon running, updating the database for active stock symbols and monitoring their progress. Sends Notifications if one of the stock symbols does something *interesting*"
edition = "2021"
repository = "https://github.com/fangornsrealm/stockanalysis"
license = "MIT"
version = "0.1.0"
keywords = ["finance", "analytics"]

[[bin]]
name = "stockanyslis-daemon"
path = "src/cli/main.rs"

[dependencies]
api = { path = "../api" }

axum = { version = "0.7.9", optional = true }
chrono = { version = "0.4", features = ["unstable-locales", "clock"] }
color-eyre = "0.6"
console-subscriber = { version = "0.1", optional = true }
criterion = { version = "0.3", optional = true, features = [ "async_tokio" ] }
dirs = "6.0.0"
eyre = "0.6"
futures = "0.3"
hyper = { version = "^0.14.17", features = [ "server", "tcp", "http1", "http2" ] }
itertools = "0.10"
log = "0.4"
mimalloc = { version = "0.1", default-features = false, optional = true }
once_cell = "1.8"
polars = { version = "0.49.1", default-features = false, features = ["lazy", "dtype-datetime", "rows", "fmt_no_tty", "json", "is_in"] }
prometheus = { version = "0.13", features = [ "process" ] }
proptest = { version = "1.0", optional = true }
regex = "1.11.1"
rusqlite = {version = "0.31.0", features = ["bundled", "chrono"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = { version = "0.12.2", features = ["paris"] }
smallvec = { version = "^1.6.1", features = [ "serde" ] }
structopt = "0.3"
syntect = { version = "5.2.0", optional = true }
thiserror = "1.0"
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "json" ] }
url = "2.2"
users = "0.11"

[dev-dependencies]
pretty_assertions = "1.0"
proptest = { version = "1.0" }
tracing-test = "0.2"

[build-dependencies]
tokio = { version = "1.47.0", features = ["full"] }
bincode = "1.3.3"
yahoo-finance-symbols = "0.1.4"
api = { path = "../api" , features = ["kaleido"] }
eyre = "0.6"
time = { version = "0.3.5", features = [ "formatting", "parsing" ] }

[features]

[[bench]]
name = "criterion"
harness = false
path = "criterion.rs"
required-features = [ "bench", "proptest" ]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
overflow-checks = true
strip = true

# Compilation profile for any non-workspace member.
# Dependencies are optimized, even in a dev build. This improves dev performance
# while having neglible impact on incremental build times.
[profile.dev.package."*"]
opt-level = 3
