[package]
name = "desktop"
description = "desktop frontend for user interaction"
license.workspace = true
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
dioxus = { version = "0.6.3", workspace = true, features = ["fullstack", "router"] }
ui = { workspace = true }
api = { workspace = true, optional = true }

syntect = { version = "5.2.0", optional = true }
tokio = { version = "1.47.0", features=["macros", "rt-multi-thread"], optional = true }
axum = { version = "0.7.9", optional = true }

[features]
default = ["server"]
desktop = ["dioxus/desktop"]
server = ["dioxus/server", "dep:tokio", "dep:api", "dep:syntect", "dep:axum"]
save_images = ["dep:api", "dep:tokio"]

