[package]
name = "mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.3", workspace = true, features = ["fullstack", "router"] }
ui = { workspace = true }
api = { workspace = true, optional = true }

syntect = { version = "5.2.0", optional = true }
tokio = { version = "1.47.0", features=["macros", "rt-multi-thread"], optional = true }
axum = { version = "0.7.9", optional = true }

[features]
default = ["server"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:tokio", "dep:api", "dep:syntect", "dep:axum"]
save_images = ["dep:api", "dep:tokio"]
