[package]
name = "stockanalysis"
version = "0.8.3"
authors = ["Nnamdi Olisaeloka <nnamdiolisaeloka@gmail.com>"]
edition = "2021"
homepage = "https://finalytics.rs/"
repository = "https://github.com/Nnamdi-sys/finalytics"
license = "MIT"
description = "A rust library for financial data analysis"
readme = "../README.md"
keywords = ["finance", "analytics"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.99"
cached = { version = "0.56.0", features = ["async"] }
chrono = { version = "0.4", features = ["unstable-locales"] }
dirs = "6.0.0"
env_logger = "0.11"
futures = "0.3.31"
indicatif = "0.18.0"
lazy_static = "1"
log = "0.4"
market-data = { path = "../../market-data/", features = ["use-sync"] }
ndarray = "0.16.1"
once_cell = "1.21.3"
openssl = { version = "0.10.73", features = ["vendored"] }
optimization = "0.2.0"
plotly = "0.13.4"
polars = { version = "0.49.1", default-features = false, features = ["lazy", "dtype-datetime", "rows", "fmt_no_tty", "json", "is_in"] }
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json", "cookies"] }
rusqlite = {version = "0.31.0", features = ["bundled", "chrono"]}
select = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
smartcore = "0.4.2"
statrs = "0.18.0"
strum = { version = "0.27.2", features = ["derive"] }
ta = "0.5.0"
tokio = { version = "1.47.0", features = ["full"] }
vader_sentiment = "0.1.1"
webbrowser = "1.0.5"

[features]
kaleido = ["plotly/kaleido", "plotly/kaleido_download"]






