[package]
name = "stockanalysis-testexample"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["unstable-locales"] }
dirs = "6.0.0"
stockanalysis = { path = "../rust/", features = ["kaleido"] }
log = "0.4"
polars = { version = "0.49.1", default-features = false, features = ["lazy", "dtype-datetime", "rows", "fmt_no_tty", "json", "is_in"] }
simplelog = { version = "0.12.2", features = ["paris"] }
tokio = { version = "1.47.0", features=["macros", "rt-multi-thread"], optional = true }

dioxus = { version = "0.6.3", features = ["fullstack", "router"] }
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
once_cell = "1.21.3"
bincode = "1.3.3"

# Server dependancies
syntect = { version = "5.2.0", optional = true }
axum = { version = "0.7.9", optional = true }


[features]
default = ["server"]
server = ["dioxus/server", "dep:tokio", "dep:syntect", "dep:axum"]
web = ["dioxus/web"]
save_images = ["dep:tokio"]

[build-dependencies]
tokio = { version = "1.47.0", features=["macros", "rt-multi-thread"] }
bincode = "1.3.3"
yahoo-finance-symbols = "0.1.4"
stockanalysis = { path = "../rust", features = ["kaleido"] }
