[package]
name = "testexample"
description = "Example of library usage and test."
license.workspace = true
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
publish = false

[dependencies]
api = { path = "../api" }

chrono = { version = "0.4", features = ["unstable-locales"] }
dirs = "6.0.0"
log = "0.4"
polars = { version = "0.49.1", default-features = false, features = ["lazy", "dtype-datetime", "rows", "fmt_no_tty", "json", "is_in"] }
simplelog = { version = "0.12.2", features = ["paris"] }
tokio = { version = "1.47.0", features = ["full"] }

serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
once_cell = "1.21.3"
bincode = "1.3.3"

# Server dependancies
syntect = { version = "5.2.0", optional = true }
axum = { version = "0.7.9", optional = true }

[features]

[build-dependencies]
tokio = { version = "1.47.0", features = ["full"] }
bincode = "1.3.3"
yahoo-finance-symbols = "0.1.4"
api = { path = "../api" , features = ["kaleido"] }
