[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.3", features = ["fullstack", "router"], workspace = true }
api = { workspace = true, optional = true }

serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
once_cell = "1.21.3"
bincode = "1.3.3"
chrono = "0.4.41"

syntect = { version = "5.2.0", optional = true }
tokio = { version = "1.47.0", features=["macros", "rt-multi-thread"], optional = true }
axum = { version = "0.7.9", optional = true }

[features]
default = ["server"]
desktop = ["dioxus/desktop"]
server = ["dioxus/server", "dep:tokio", "dep:api", "dep:syntect", "dep:axum"]
save_images = ["dep:api", "dep:tokio"]

[build-dependencies]
tokio = { version = "1.47.0", features=["macros", "rt-multi-thread"] }
bincode = "1.3.3"
yahoo-finance-symbols = "0.1.4"
api = { workspace = true, features = ["kaleido"] }
