[package]
name = "web"
description = "web frontend for user interaction"
license.workspace = true
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]

# Common dependancies
dioxus = { version = "0.6.3", workspace = true, features = ["fullstack", "router"] }
ui = { workspace = true }
api = { workspace = true, optional = true }

serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
once_cell = "1.21.3"
bincode = "1.3.3"
chrono = "0.4.41"

# Server dependancies
syntect = { version = "5.2.0", optional = true }
tokio = { version = "1.47.0", features=["macros", "rt-multi-thread"], optional = true }
axum = { version = "0.7.9", optional = true }


[features]
default = ["server"]
server = ["dioxus/server", "dep:tokio", "dep:api", "dep:syntect", "dep:axum"]
web = ["dioxus/web"]
save_images = ["dep:api", "dep:tokio"]


[build-dependencies]
api = { workspace = true, features = ["kaleido"] }
tokio = { version = "1.47.0", features=["macros", "rt-multi-thread"] }
bincode = "1.3.3"
yahoo-finance-symbols = "0.1.4"

